<resources>
    <string name="action_settings">Settings</string>
    <string name="app_name">e-Care</string>
    <string name="help"><u>Help</u></string>
    <string name="schoolCode_title">Please Enter School Code</string>
    <string name="schoolCode_findYourSchool"><u>Find Your School Code</u></string>
    <string name="search_your_school_college">Search Your School</string>
    <string name="enter_your_search_query_here">Enter your search query here…</string>
    <string name="login_welcomeText">Welcome To</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forget_password"><u>Forget Password?</u></string>
    <string name="login_prev">Previous</string>
    <string name="login_next">Next</string>
    <string name="login_forgot_password_">Forgot Password?</string>
    <string name="faqs_title">FAQs</string>
    <string name="contact_no">"Contact No:  "</string>
    <string name="contact_person">"Contact Person:  "</string>
    <string name="email">"Email: "</string>
    <string name="home_welcome">Welcome </string>
    <string name="onboarding_title_1">School ERP on\nyour’s finger tips</string>
    <string name="onboarding_description_1">Don\'t wait for tomorrow, start saving today and give yourself the gift of a stylish and fulfilling retirement.</string>
    <string name="onboarding_title_2">Manage your School\nManagement</string>
    <string name="onboarding_description_2">Don\'t wait for tomorrow, start saving today and give yourself the gift of a stylish and fulfilling retirement.</string>
    <string name="i_would_like_to_send_password_to_my_registered">I would like to send password to my registered</string>
    <string name="would_you_like_to_receive_credentials_of_login">Would you like to receive credentials of Login</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notice">Notice</string>
    <string name="compliance">compliance</string>
    <string name="report_card">Report Card</string>
    <string name="circular">Circular</string>
    <string name="payslip">PaySlip</string>
    <string name="pay_slip">Pay Slip</string>
    <string name="syallabus">Syllabus</string>
    <string name="class_notice">Class Notice</string>
    <string name="pdf_details">  PDF Details :</string>
    <string name="view">View</string>
    <string name="view_download">View &amp; Download</string>
    <string name="clock_icon">Clock Icon</string>
    <string name="general_date_pun">Date :</string>
    <string name="general_date">Date</string>
    <string name="general_update_on_pun">Update On :</string>
    <string name="updated_by">Update By </string>
    <string name="updated_by_with_colun">Update By: </string>
    <string name="like">Like </string>
    <string name="no_notice_available">No Notice Available</string>
    <string name="no_history_available">No Leave History</string>
    <string name="no_Syllabus_available">No Syllabus Available</string>
    <string name="attendance_no_attendance_available">No Attendance Available</string>
    <string name="no_activity_available">No Activity Available</string>
    <string name="no_att_available">No Attendance Available</string>
    <string name="assignment_no_assignment_available">No Assignment Available</string>
    <string name="no_latest_book_available">No Latest Book Available</string>
    <string name="no_book_available">No Book Available</string>
    <string name="no_circuler_available">No Circular Available</string>
    <string name="no_lesson_available">No Lesson Available</string>
    <string name="accession_no__">"Accession No :"</string>
    <string name="book_title">Book Title :</string>
    <string name="general_author_pun">Author :</string>
    <string name="year_of_publication">Year of Publication :</string>
    <string name="lbl_subject">Subject :</string>
    <string name="hint">Storage Hint :</string>
    <string name="lbl_book_no">Book No :</string>
    <string name="lbl_class_no">Class No :</string>
    <string name="issuable">Issuable :</string>
    <string name="triangle">Triangle</string>
    <string name="_holiday_">(Holiday)</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="enter_password">Enter Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="powered_by">Powered by</string>
    <string name="demo_school_name_franciscan_international_school">Welcome to Franciscan e-Care</string>
    <string name="demo_school_location_greater_noida">Greater Noida</string>
    <string name="false_value">False</string>
    <string name="true_value">True</string>
    <string name="date_">Date :</string>
    <string name="update_on_">Update On :</string>
    <string name="general_ok">OK</string>
    <string name="add_thoughts">Add Thoughts</string>
    <string name="enter_thoughts_hint">Enter Thoughts</string>
    <string name="enter_auther_hint">Enter Author</string>
    <string name="book_details_title">Book Details</string>
    <string name="answer">Answer</string>
    <string name="please_type_ans">" Please Type Answer"</string>
    <string name="general_save">Save</string>
    <string name="type_your_question">Type your question</string>
    <string name="school_collage_library">School/Collage Library</string>
    <string name="mega_e_book">Mega E-Book</string>
    <string name="latest_book">Latest Book</string>
    <string name="my_account">My Account</string>
    <string name="yes">OK</string>
    <string name="yes_holder">Yes</string>
    <string name="add_image">Add Image</string>
    <string name="pending">Pending</string>
    <string name="successfully">Successfully!!!</string>
    <string name="submit_successfully">Submit Successfully!!!</string>
    <string name="delete_alert">Delete Alert</string>
    <string name="delete_alert_are_you_sure">Are you sure, You want to delete</string>
    <string name="lbl_total_leaves_1">Total Leaves: 1</string>
    <string name="general_to_pun">To: </string>
    <string name="general_from_pun">From:</string>
    <string name="leave_history">Leave History</string>
    <string name="leave_request">Leave Request</string>
    <string name="general_status">Status</string>
    <string name="general_status_pun">Status : </string>
    <string name="day_s">Day(s)</string>
    <string name="day_s_1">1.0 Day(s)</string>
    <string name="suggested">Suggested</string>
    <string name="select_reason">Select Reason</string>
    <string name="enter_your_reason">Enter Your Reason</string>
    <string name="select_proof">Attach File</string>
    <string name="select_attachment">Select Attachment</string>
    <string name="i_agree">I agree</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="_02">0</string>
    <string name="submitted_on">"To Be Submitted On: "</string>
    <string name="leave_setting">Leave Setting</string>
    <string name="done">Done</string>
    <string name="appley_for_leave">Apply For Leave</string>
    <string name="apply_for_leave">Apply For Leave</string>
    <string name="approved_by">Approved By:</string>
    <string name="lbl_message_create_new_inferaction">*Note : Please select Category, Subcategory and Consequences first</string>
    <string name="lbl_message_create_new_apprec">*Note : Please select Category, Subcategory and Reward first</string>
    <string name="save_amp_notify"><![CDATA[Save & Notify]]></string>
    <string name="select_infraction_category">Select Infraction Category</string>
    <string name="select_que_type">Select Question Type</string>
    <string name="select_infraction_subcategory">Select Infraction Subcategory</string>
    <string name="select_apprec_category">Select Appreciation Category</string>
    <string name="select_apprec_subcategory">Select Appreciation Subcategory</string>
    <string name="instance">Instance</string>
    <string name="instance_wit">"Instance: "</string>
    <string name="infraction_on">"Infraction on : "</string>
    <string name="appreciatin_on">"Appreciation on : "</string>
    <string name="select_consequences">Select Consequences</string>
    <string name="select_reward">Select Reward</string>
    <string name="enter_corrective_action">\n \n \n</string>
    <string name="enter_remark">Enter Remark</string>
    <string name="subcategory">Subcategory:</string>
    <string name="consequences_pun">Consequences:</string>
    <string name="corrective_action">Corrective Action:</string>
    <string name="issue_by">Issue by:</string>
    <string name="category">"Category: "</string>
    <string name="actual_no">"Actual Amount: "</string>
    <string name="concessionno">"Concession: "</string>
    <string name="received_amount">"Received Amount: "</string>
    <string name="no_data">No Data</string>
    <string name="reward">Reward:</string>
    <string name="remark">Remark:</string>
    <string name="enter_thoughts">Enter Thoughts</string>
    <string name="enter_auther">Enter Author</string>
    <string name="book_details">Book Details</string>
    <string name="clear_filter">Clear Filter</string>
    <string name="sms_app_message"><![CDATA[SMS & App Message]]></string>
    <string name="only_app_message">Only App Message</string>
    <string name="search">Search…</string>
    <string name="retry">Retry</string>
    <string name="share">Share</string>
    <string name="recipient_s">Recipient(s)</string>
    <string name="assigned_on">Assigned on:</string>
    <string name="to_be_submitted_on">To be submitted on:</string>
    <string name="space" />
    <string name="delete">Delete</string>
    <string name="type_your_message_with_word_limit">Type Your Message(Word limit 200 Words)</string>
    <string name="browse_photo"><![CDATA[Browse Photo]]></string>
    <string name="select_subject">"Select Subject "</string>
    <string name="lbl_select_class">Select Class</string>
    <string name="lbl_forward_to">Forward to</string>
    <string name="general_from_date">From Date</string>
    <string name="general_to_date">To Date</string>
    <string name="transport_type">Transport Type :</string>
    <string name="vehicle_number">Vehicle Number</string>
    <string name="search_by_date_range">Search By Date Range</string>
    <string name="search_by_classes">Search By Classes</string>
    <string name="search_by_subjects">Search By Subjects</string>
    <string name="search_by_status">Search By Status</string>
    <string name="no">No</string>
    <string name="driver_name">Driver Name</string>
    <string name="vehicle_name">Vehicle Name</string>
    <string name="route_no">Route No</string>
    <string name="route_incharge_name">Route In-charge Name</string>
    <string name="route_incharge_mobile_no">Route In-charge Mobile No.</string>
    <string name="s">S</string>
    <string name="m">M</string>
    <string name="t">T</string>
    <string name="w">W</string>
    <string name="f">F</string>
    <string name="do_you_want_to_send_push_notification">Do you want to send push notification?</string>
    <string name="cancel">Cancel</string>
    <string name="fees_payment_reminder">Fees Payment Reminder</string>
    <string name="access_blocked_due_to_unpaid_fees">⚠️ Access blocked due to unpaid fees</string>
    <string name="please_pay_the_fee_or_contact_the_school">Please pay the fee or contact the school..</string>
    <string name="pay_fees">Pay Fees</string>
    <string name="this_message_is_2_2_mb_you_can_reduce_message_size_by_scaling_the_image_to_one_of_the_sizes_below">This message is 2.2 MB. You can reduce message size by scaling the image to one of the sizes below.</string>
    <string name="small_45_6_kb">Small (45.6 KB)</string>
    <string name="medium_114_kb">Medium (114 KB)</string>
    <string name="large_787_kb">Large (787 KB)</string>
    <string name="actual_size_2_2_mb">Actual Size (2.2 MB)</string>
</resources>