<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/calendar_day"
    android:layout_height="@dimen/_25sdp"
    android:background="@color/reports_tiles_bg_grey_light"
    android:gravity="center">

    <TextView
        android:id="@+id/s"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/s"
        android:textColor="@color/windows" />

    <TextView
        android:id="@+id/m"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/m"
        android:textColor="@color/module" />

    <TextView
        android:id="@+id/t"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/t"
        android:textColor="@color/module" />

    <TextView
        android:id="@+id/w"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/w"
        android:textColor="@color/module" />

    <TextView
        android:id="@+id/th"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/t"
        android:textColor="@color/module" />

    <TextView
        android:id="@+id/f"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/f"
        android:textColor="@color/module" />

    <TextView
        android:id="@+id/sa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/s"
        android:textColor="@color/module" />


</LinearLayout>
