<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
   >

    <TextView
        android:id="@+id/tvMessageSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/this_message_is_2_2_mb_you_can_reduce_message_size_by_scaling_the_image_to_one_of_the_sizes_below"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:gravity="center"
        android:paddingTop="16dp"
        android:paddingBottom="16dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#333333" />

    <Button
        android:id="@+id/btnSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/small_45_6_kb"
        android:textColor="#3F80F4"
        android:background="?android:attr/selectableItemBackground"
        android:textAllCaps="false"
        android:gravity="center"
        android:paddingTop="16dp"
        android:paddingBottom="16dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#333333" />

    <Button
        android:id="@+id/btnMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/medium_114_kb"
        android:textColor="#3F80F4"
        android:background="?android:attr/selectableItemBackground"
        android:textAllCaps="false"
        android:gravity="center"
        android:paddingTop="16dp"
        android:paddingBottom="16dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#333333" />

    <Button
        android:id="@+id/btnLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/large_787_kb"
        android:textColor="#3F80F4"
        android:background="?android:attr/selectableItemBackground"
        android:textAllCaps="false"
        android:gravity="center"
        android:paddingTop="16dp"
        android:paddingBottom="16dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#333333" />

    <Button
        android:id="@+id/btnActual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/actual_size_2_2_mb"
        android:textColor="#3F80F4"
        android:background="?android:attr/selectableItemBackground"
        android:textAllCaps="false"
        android:gravity="center"
        android:paddingTop="16dp"
        android:paddingBottom="16dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#333333" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textColor="#3F80F4"
        android:background="?android:attr/selectableItemBackground"
        android:textAllCaps="false"
        android:gravity="center"
        android:paddingTop="16dp"
        android:paddingBottom="16dp" />

</LinearLayout>
