<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        tools:context=".ui.leave.LeaveHistoryFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/md_theme_light_primary"
                android:elevation="8dp"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/ic_arrow_back_24px"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:title="@string/leave_history"
                app:titleCentered="true"
                app:titleTextAppearance="?attr/titleTextAppearance"
                app:titleTextColor="@color/white" />

            <TextView
                android:id="@+id/tv_no_data"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:fontFamily="@font/ubuntu_medium"
                android:gravity="center"
                android:text="@string/no_history_available"
                android:textSize="16sp"
                android:visibility="gone"

                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_leave_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                tools:listitem="@layout/leave_list_item" />


        </LinearLayout>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fb_apply_for_leave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="15dp"
            android:contentDescription="@string/appley_for_leave"
            android:src="@drawable/rounded_add_24"
             android:text="@string/apply_for_leave"
            android:textColor="@android:color/black" />


    </RelativeLayout>
</layout>