<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/grey_light"
    android:gravity="center_vertical">

    <LinearLayout
        android:id="@+id/ll_start"
        android:layout_width="0dp"
        android:layout_height="@dimen/_45sdp"
        android:layout_weight="1"
        android:gravity="center_vertical"
         android:orientation="vertical"
        android:paddingStart="@dimen/_15sdp"
        android:paddingTop="@dimen/_7sdp"
        android:paddingBottom="@dimen/_7sdp"
        tools:ignore="RtlSymmetry">

        <TextView
            android:id="@+id/tv_from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/general_from_pun"
            android:fontFamily="@font/ubuntu_regular"
            android:textColor="@color/grey_60"
            android:textSize="@dimen/_9sdp" />


        <TextView
            android:id="@+id/tv_start_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center"
            android:text="@string/general_from_date"
            android:textSize="@dimen/_11sdp"
            android:fontFamily="@font/ubuntu_bold"
            android:textColor="@color/grey_60"/>
    </LinearLayout>

    <View
        android:layout_width="@dimen/_9sdp"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/grey_60"
        android:textSize="@dimen/_9sdp" />

    <LinearLayout
        android:id="@+id/ll_end"
        android:layout_width="0dp"
        android:layout_height="@dimen/_45sdp"
        android:layout_weight="1"
        android:gravity="center_vertical"
         android:orientation="vertical"
        android:paddingTop="@dimen/_7sdp"
        android:paddingBottom="@dimen/_7sdp">

        <TextView
            android:id="@+id/tv_to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/general_to_pun"
            android:fontFamily="@font/ubuntu_regular"
            android:textColor="@color/grey_60"
            android:textSize="@dimen/_9sdp" />


        <TextView
            android:id="@+id/tv_end_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center"
            android:text="@string/general_to_date"
            android:textSize="@dimen/_11sdp"
            android:fontFamily="@font/ubuntu_bold"
            android:textColor="@color/grey_60" />
    </LinearLayout>
</LinearLayout>