<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="12dp"
    android:background="@drawable/shape_dialog"
    android:minWidth="390dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:text="@string/do_you_want_to_send_push_notification"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginVertical="@dimen/_14sdp"
            app:fontFamily="@font/ubuntu_medium" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/grey_light" />




    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_canel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_dialog_bottom_main"
            android:minHeight="40dp"
            android:text="@string/no"
            app:fontFamily="@font/ubuntu_medium"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@color/brand_color"
            android:minHeight="40dp"
            android:text="@string/yes_holder"
            android:textColor="@color/white"
             app:fontFamily="@font/ubuntu_medium" />

    </LinearLayout>

</LinearLayout>